force-app/main/default/objects/SPEN_CustomerServiceForm__c/SPEN_CustomerServiceForm__c.object-meta.xml
<CustomObject>
    <description>Object used to capture the customer service forms</description>
    <label>Customer Service Form</label>
    <nameField>
        <displayFormat>CSF-{0000}</displayFormat>
        <label>Customer Service Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Service Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>