force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_AnythingElseToTellUs__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AnythingElseToTellUs__c</fullName>
    <description>Field used to store information provided by the customer.
Used in Customer Handshake form.</description>
    <label>Anything else to tell us?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>