force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_AreAnyFurtherWorksRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AreAnyFurtherWorksRequired__c</fullName>
    <description>Field to store the information about the requirement of further works. Used in the LV cut out form.</description>
    <label>Are any further works required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>