force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_AreYouHappyForEnquiryToBeClosed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AreYouHappyForEnquiryToBeClosed__c</fullName>
    <description>Field used to capture if the customer is happy or not for the enquiry closure. 
Used in Customer Handshake form</description>
    <label>Are you happy for enquiry to be closed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>