force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_CableOrConductorType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CableOrConductorType__c</fullName>
    <description>Field used to store the cable or conductor type
Used in LV Service Termination Survey forms</description>
    <label>Cable or conductor type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>Concentric</fullName>
            </value>
            <value>
                <fullName>VIR/mackenite</fullName>
            </value>
            <value>
                <fullName>HSOS</fullName>
            </value>
            <value>
                <fullName>Under eaves</fullName>
            </value>
            <value>
                <fullName>Tape armoured</fullName>
            </value>
            <value>
                <fullName>PILC</fullName>
            </value>
            <value>
                <fullName>Hybrid concentric</fullName>
            </value>
            <value>
                <fullName>Split concentric</fullName>
            </value>
            <value>
                <fullName>Looped service</fullName>
            </value>
            <value>
                <fullName>VIR cabling</fullName>
            </value>
            <value>
                <fullName>Bubsar riser</fullName>
            </value>
            <value>
                <fullName>Pyro cable</fullName>
            </value>
            <value>
                <fullName>Undersized PVC</fullName>
            </value>
            <value>
                <fullName>PVC looped neutral</fullName>
            </value>
            <value>
                <fullName>Concentric - LSOH</fullName>
            </value>
            <value>
                <fullName>Concentric - old</fullName>
            </value>
            <value>
                <fullName>Concentric - CNE</fullName>
            </value>
            <value>
                <fullName>Lead covered</fullName>
            </value>
            <value>
                <fullName>Wire armour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>