force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to link Customer Handshake form to the respective case.
Used in Customer Handshake forms.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Service Forms</relationshipLabel>
    <relationshipName>Customer_Service_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>