force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_CaseReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseReferenceNumber__c</fullName>
    <description>Field used to store the case reference number.
Used in Customer Handshake forms.</description>
    <label>Case reference number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>