force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_ConnectedPhase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectedPhase__c</fullName>
    <description>Field used to store the connected phase
Used in LV Service Termination Survey forms</description>
    <label>Connected phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>