force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_ConnectionMeteredOrUnmetered__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectionMeteredOrUnmetered__c</fullName>
    <description>Field used to store the type of connection
Used in LV Service Termination Survey forms</description>
    <label>Is connection metered or unmetered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metered</fullName>
            </value>
            <value>
                <fullName>Unmetered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>