force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_CurrentRatingInstalledFuse__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CurrentRatingInstalledFuse__c</fullName>
    <description>Field used to store the current rating of installed Fuses
Used in LV Service Termination Survey forms</description>
    <label>Current rating of installed fuse(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6A</fullName>
            </value>
            <value>
                <fullName>16A</fullName>
            </value>
            <value>
                <fullName>30A</fullName>
            </value>
            <value>
                <fullName>60A</fullName>
            </value>
            <value>
                <fullName>80A</fullName>
            </value>
            <value>
                <fullName>100A</fullName>
            </value>
            <value>
                <fullName>160A</fullName>
            </value>
            <value>
                <fullName>200A</fullName>
            </value>
            <value>
                <fullName>315A</fullName>
            </value>
            <value>
                <fullName>400A</fullName>
            </value>
            <value>
                <fullName>Wired (uknown)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>