force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_CurrentRatingLVServiceTermination__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CurrentRatingLVServiceTermination__c</fullName>
    <description>Field used to store the current rating of the LV Service Termination
Used in LV Service Termination Survey forms</description>
    <label>Current rating of LV service termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25A</fullName>
            </value>
            <value>
                <fullName>60A</fullName>
            </value>
            <value>
                <fullName>80A</fullName>
            </value>
            <value>
                <fullName>100A</fullName>
            </value>
            <value>
                <fullName>200A</fullName>
            </value>
            <value>
                <fullName>300A (heavy duty)</fullName>
            </value>
            <value>
                <fullName>400A (heavy duty)</fullName>
            </value>
            <value>
                <fullName>600A (heavy duty)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>