force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerName__c</fullName>
    <description>Field used to capture name of the customer
Used in RLM and RATOV forms</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>