force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_CustomerVulnerability__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerVulnerability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store the vulnerability of the customer
Used in RATOV forms</description>
    <label>Customer Vulnerability</label>
    <referenceTo>SPEN_PSRVulnerabilityType__c</referenceTo>
    <relationshipLabel>Customer Service Forms</relationshipLabel>
    <relationshipName>Customer_Service_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>