force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <description>Field used to capture additional comments
Used in RLM, Service Termination Retention and RATOV Tracker forms</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>