force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <description>Field used to store the district
Used in LV Service Termination Survey forms</description>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_District</valueSetName>
    </valueSet>
</CustomField>