force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_Earthing__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Earthing__c</fullName>
    <description>Field used to store the earthing
Used in LV Service Termination Survey forms</description>
    <label>Earthing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNE</fullName>
            </value>
            <value>
                <fullName>PME</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>