force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_EarthLoopImpedanceZe__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarthLoopImpedanceZe__c</fullName>
    <description>Field used to store the Earth Loop Impedance (Ze)
Used in LV Service Termination Survey forms</description>
    <label>Earth loop impedance (Ze)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>