force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_EarthLoopViolation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarthLoopViolation__c</fullName>
    <description>Field used to display if there was a earth loop violation
Used in LV Service Termination Survey forms</description>
    <label>Earth loop violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>