force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_ElectricVehicleColumn__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ElectricVehicleColumn__c</fullName>
    <description>Field used to store the answer if there is a vehicle charger on column
Used in LV Service Termination Survey forms</description>
    <label>Is an electric vehicle charger on column</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>