force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_EmployersName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmployersName__c</fullName>
    <description>Field used to store the employers name
Used in LV Service Termination Survey forms</description>
    <label>Employers Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>