force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_EvidenceOfLCTInstalledOnSite__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EvidenceOfLCTInstalledOnSite__c</fullName>
    <description>Field used to store the answer if there is evidence of LCT installed on site?
Used in LV Service Termination Survey forms</description>
    <inlineHelpText>LCT means Low Carbon Technology</inlineHelpText>
    <label>Evidence of LCT installed on site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>