force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_HowCouldWeHaveImproved__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HowCouldWeHaveImproved__c</fullName>
    <description>Field used to store possible improvements. 
Used in Customer Handshake form.</description>
    <label>How could we have improved?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>