force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_HowWasYourExperience__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HowWasYourExperience__c</fullName>
    <description>Field used to display how was the customer experience.
Used in Customer Handshake forms.</description>
    <label>How was your experience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>