force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_IncidentNumberText__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentNumberText__c</fullName>
    <description>Field used to store the incident number
Used in LV Service Termination Survey forms</description>
    <label>Incident number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>