force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_IsThereVoltageLeakPresent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsThereVoltageLeakPresent__c</fullName>
    <description>Field used to store if there is there voltage leak present in the LV Service Termination?
Used in LV Service Termination Survey forms</description>
    <label>Is there voltage leak present?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>