force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_Location__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Location__c</fullName>
    <description>Field used to store the location related to the form
Used in LV Service Termination Survey forms</description>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>