force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_LVServiceTerminationReplaced__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LVServiceTerminationReplaced__c</fullName>
    <description>Field used to store the answer if the existing LV Service Termination being replaced
Used in LV Service Termination Survey forms</description>
    <label>LV service termination being replaced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>