force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_LVServiceTerminationSealed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LVServiceTerminationSealed__c</fullName>
    <description>Field used to store if the LV Service Termination been sealed
Used in LV Service Termination Survey forms</description>
    <label>Has LV service termination been sealed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>