force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_LVServiceTerminationType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LVServiceTerminationType__c</fullName>
    <description>Field used to store the LV Service Termination Type
Used in LV Service Termination Survey forms</description>
    <inlineHelpText>LVST - LV Service Termination</inlineHelpText>
    <label>What type of LVST is being replaced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grey plastic</fullName>
            </value>
            <value>
                <fullName>Metal clad</fullName>
            </value>
            <value>
                <fullName>Black plastic</fullName>
            </value>
            <value>
                <fullName>Fused neutral</fullName>
            </value>
            <value>
                <fullName>Rewireable</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>