force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_MainReasonForVisit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MainReasonForVisit__c</fullName>
    <description>Field used to store the main reason for visit
Used in LV Service Termination Survey forms</description>
    <label>Indicate the main reason for the visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proactive LV service termination replacement</fullName>
            </value>
            <value>
                <fullName>Proactive unlooping replacement</fullName>
            </value>
            <value>
                <fullName>Reactive LV service termination replacement</fullName>
            </value>
            <value>
                <fullName>Reactive unlooping replacement</fullName>
            </value>
            <value>
                <fullName>Rising lateral main replacement</fullName>
            </value>
            <value>
                <fullName>Fault replacement</fullName>
            </value>
            <value>
                <fullName>Smart services driven replacement</fullName>
            </value>
            <value>
                <fullName>New service connection</fullName>
            </value>
            <value>
                <fullName>Proactive inspection</fullName>
            </value>
            <value>
                <fullName>Proactive inspection programme</fullName>
            </value>
            <value>
                <fullName>Coincidental inspection while at property</fullName>
            </value>
            <value>
                <fullName>DELOG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>