force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_MobileTelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MobileTelephoneNumber__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Field used to capture the mobile telephone number of the customer
Used in RLM and RATOV forms</description>
    <label>Mobile Telephone Number</label>
    <type>Phone</type>
</CustomField>