force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_NumberOfPhases__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NumberOfPhases__c</fullName>
    <description>Filed used to store the number of phases
Used in LV Service Termination Survey forms</description>
    <label>Number of phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single phase</fullName>
            </value>
            <value>
                <fullName>Two phase</fullName>
            </value>
            <value>
                <fullName>Three phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>