force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_PMO__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PMO__c</fullName>
    <description>Field to store the PMO number.</description>
    <label>PMO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>