force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_PolarityCorrect__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PolarityCorrect__c</fullName>
    <description>Field used to store if polarity is correct
Used in LV Service Termination Survey forms</description>
    <label>Polarity correct?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>