force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_PostCode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PostCode__c</fullName>
    <description>Field used to store the post code.
Used in RATOV forms</description>
    <label>Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>