force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_PurposeOfUndertakingSurvey__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PurposeOfUndertakingSurvey__c</fullName>
    <description>Field used to store the values of the reason to undertake the survey
Used in LV Service Termination Survey forms</description>
    <label>Purpose of undertaking survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fault</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>New service connection</fullName>
            </value>
            <value>
                <fullName>DELOG</fullName>
                <isActive>false</isActive>
                <label>DELOG</label>
            </value>
            <value>
                <fullName>LV service termination inspection</fullName>
                <isActive>false</isActive>
                <label>LV service termination inspection</label>
            </value>
            <value>
                <fullName>LV service termination replacement</fullName>
                <isActive>false</isActive>
                <label>LV service termination replacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>