force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_RecordedVoltage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RecordedVoltage__c</fullName>
    <description>Field used to store the voltage
Used in LV Service Termination Survey forms</description>
    <label>Recorded voltage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>