force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_RecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RecordTypeDevName__c</fullName>
    <description>Field used to capture form&apos;s record type. The purpose of this field is to be used in a record triggered flow to update the RecordTypeId with the right record type after the form creation.</description>
    <label>Record Type Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>