force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ReferenceNumber__c</fullName>
    <description>Field used to store the reference number
Used in LV Service Termination Survey and RATOV forms</description>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>