force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_ResolutionDetails__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResolutionDetails__c</fullName>
    <description>Field to store the details of resolution
Used in RATOV forms</description>
    <label>Resolution Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>