force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_SelectLCTFoundAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SelectLCTFoundAddress__c</fullName>
    <description>Field used to store the LCT found
Used in LV Service Termination Survey forms</description>
    <label>Select any LCTs found at this address</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar panels</fullName>
            </value>
            <value>
                <fullName>Battery storage</fullName>
            </value>
            <value>
                <fullName>EV charger</fullName>
            </value>
            <value>
                <fullName>Heat pump</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>