force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_SmartMeterInstalled__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SmartMeterInstalled__c</fullName>
    <description>Field used to store the answer if there is a smart meter installed
Used in LV Service Termination Survey forms</description>
    <label>Is there a smart meter installed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>