force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_SmartMeterReady__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SmartMeterReady__c</fullName>
    <description>Field used to store the answer regarding the installation Smart Meter
Used in LV Service Termination Survey forms</description>
    <label>Is the installation smart meter ready?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>