force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_SpecifyCabinetOwner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecifyCabinetOwner__c</fullName>
    <description>Field used to store another cabinet owner
Used in LV Service Termination Survey forms</description>
    <label>Please specify cabinet owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>