force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_SpecifyLCTBelow__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecifyLCTBelow__c</fullName>
    <description>Field used to specify LCT
Used in LV Service Termination Survey forms</description>
    <label>Please specify LCT below</label>
    <length>255</length>
    <type>Text</type>
</CustomField>