force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_Street__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Street__c</fullName>
    <description>Field used to store the street
Used in RATOV forms</description>
    <label>First line of address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>