force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_SupplyType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SupplyType__c</fullName>
    <description>Field use to store the supply type
Used in LV Service Termination Survey forms</description>
    <label>Supply type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal mains</fullName>
            </value>
            <value>
                <fullName>U/G service</fullName>
            </value>
            <value>
                <fullName>OHL</fullName>
            </value>
            <value>
                <fullName>Mural wiring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>