force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TelephoneNumber__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Field to store the landline telephone number of the customer
Used in RATOV forms</description>
    <label>Landline Telephone Number</label>
    <type>Phone</type>
</CustomField>