force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_TypeOfEarthingConnection__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TypeOfEarthingConnection__c</fullName>
    <description>Field used to store the type of earthing connection
Used in LV Service Termination Survey forms</description>
    <label>Type of earthing connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sweated</fullName>
            </value>
            <value>
                <fullName>Jubilee clip</fullName>
            </value>
            <value>
                <fullName>Hepworth clamp</fullName>
            </value>
            <value>
                <fullName>Earthing block</fullName>
            </value>
            <value>
                <fullName>Unapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>