force-app/main/default/objects/SPEN_CustomerServiceForm__c/fields/SPEN_TypeOfIncident__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TypeOfIncident__c</fullName>
    <description>Field used to identify the type of incident
Field used in RATOV forms</description>
    <label>Type of Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connections Delivery</fullName>
                <label>Connections delivery</label>
            </value>
            <value>
                <fullName>Earthing</fullName>
            </value>
            <value>
                <fullName>Inaccurate Information</fullName>
                <label>Inaccurate information</label>
            </value>
            <value>
                <fullName>Internal mains/ laterals</fullName>
                <label>Internal mains/Laterals</label>
            </value>
            <value>
                <fullName>Land Damage</fullName>
                <label>Land damage</label>
            </value>
            <value>
                <fullName>LCT</fullName>
            </value>
            <value>
                <fullName>Loss of supply</fullName>
            </value>
            <value>
                <fullName>Lost Neutral</fullName>
                <label>Lost neutral</label>
            </value>
            <value>
                <fullName>Planned Interruptions</fullName>
                <label>Planned interruptions</label>
            </value>
            <value>
                <fullName>Site excavation / reinstatement</fullName>
                <label>Site excavation/Reinstatement</label>
            </value>
            <value>
                <fullName>Unloop / Shared supplies</fullName>
                <label>Unloop/Shared supplies</label>
            </value>
            <value>
                <fullName>Voltage Issues</fullName>
                <label>Voltage issues</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>